<resources>
    <string name="quiz">Quiz</string>
    <string name="finito">Finito!</string>
    <string name="quiz_mark_placeholder">%d/%d</string>
    <string name="answered">ANSWERED</string>
    <string name="quiz_welcome_text">Each time 10 questions are randomly generated. Period progress will increase if answered correctly!</string>
    <string name="total_questions">At the moment quiz contains 325 questions!</string>
    <string name="start">BEGIN!</string>
    <string name="continue_further">CONTINUE</string>
    <string name="do_you_really_want_to_exit">Do you really want to exit?</string>
    <string name="progress_wont_be_counted">Answers won\'t be counted!</string>
    <string name="yes">YES!</string>
    <string name="no">NO!</string>
    <string name="cancel">Cancel</string>
    <string name="exit_confirmation">Yes, exit!</string>
    <string name="correct_answered">Correct answers</string>
    <string name="result_10">Your knowledge is just terrific!\nYou should definitely think about paleontological career?</string>
    <string name="result_9">Great result, close to the perfection!</string>
    <string name="result_8">Really good result! Rotated infinity sign shows, that there is always room to improve!</string>
    <string name="result_7">Lucky number! I think, this is a good sign!</string>
    <string name="result_6">More than half, better than nothing!</string>
    <string name="result_5">University students really want this mark, but you can be better!</string>
    <string name="result_4">Well, it is not a Soviet Union or France, four is not a great mark!</string>
    <string name="result_3">I think you should try better!</string>
    <string name="result_2">Two is a sign, that you should consider studying more!</string>
    <string name="result_1">Unfortunately, it doesn\'t mean that you are first..</string>
    <string name="result_0">Yes, just a round zero!</string>
    <string name="hadean_question_1">When did the Hadean Eon begin?</string>
    <string name="hadean_variant_1_1">4560 mya</string>
    <string name="hadean_variant_1_2">4700 mya</string>
    <string name="hadean_variant_1_3">3890 mya</string>
    <string name="hadean_variant_1_4">3200 mya</string>
    <string name="hadean_question_2">What was the surface of early Hadean Earth mostly covered by?</string>
    <string name="hadean_variant_2_1">Volcanoes and molten rock</string>
    <string name="hadean_variant_2_2">Ice and water</string>
    <string name="hadean_variant_2_3">Forests and oceans</string>
    <string name="hadean_variant_2_4">Plains and mountains</string>
    <string name="hadean_question_3">Why was the early Hadean atmosphere frequently lost?</string>
    <string name="hadean_variant_3_1">It was stripped away by frequent collisions with space objects</string>
    <string name="hadean_variant_3_2">It was absorbed by the oceans</string>
    <string name="hadean_variant_3_3">It was too light to be retained by Earth\'s gravity</string>
    <string name="hadean_variant_3_4">There was no atmosphere at all</string>
    <string name="hadean_question_4">What evidence suggests that liquid water may have existed 4.4 billion years ago?</string>
    <string name="hadean_variant_4_1">Sedimentary rocks</string>
    <string name="hadean_variant_4_2">Fossilized microorganisms</string>
    <string name="hadean_variant_4_3">Zircon crystals</string>
    <string name="hadean_variant_4_4">Basalt formations</string>
    <string name="hadean_question_5">What was one of the main sources of organic molecules on early Earth?</string>
    <string name="hadean_variant_5_1">Carbon-rich meteorites</string>
    <string name="hadean_variant_5_2">Volcanic eruptions</string>
    <string name="hadean_variant_5_3">Tidal pools</string>
    <string name="hadean_variant_5_4">Hydrothermal vents</string>
    <string name="hadean_question_6">What event marked the end of the Hadean Eon?</string>
    <string name="hadean_variant_6_1">Stabilization of Earth\'s crust and formation of early oceans</string>
    <string name="hadean_variant_6_2">Formation of the first multicellular life</string>
    <string name="hadean_variant_6_3">Mass extinction of primitive life forms</string>
    <string name="hadean_variant_6_4">The appearance of complex animal life</string>
    <string name="hadean_question_7">What temperature could the early Hadean surface reach?</string>
    <string name="hadean_variant_7_1">230°C</string>
    <string name="hadean_variant_7_2">50°C</string>
    <string name="hadean_variant_7_3">3500°C</string>
    <string name="hadean_variant_7_4">10,000°C</string>
    <string name="hadean_question_8">What was a major factor that made early Earth uninhabitable?</string>
    <string name="hadean_variant_8_1">Frequent asteroid impacts and extreme volcanic activity</string>
    <string name="hadean_variant_8_2">Lack of oxygen</string>
    <string name="hadean_variant_8_3">Global ice ages</string>
    <string name="hadean_variant_8_4">Intense magnetic storms</string>
    <string name="hadean_question_9">What is the most likely scientific reason for the appearance of life on Earth?</string>
    <string name="hadean_variant_9_1">Meteorites</string>
    <string name="hadean_variant_9_2">God</string>
    <string name="hadean_variant_9_3">Nuclear fusion</string>
    <string name="hadean_variant_9_4">Donald Trump</string>
    <string name="archean_question_1">When did the Archean Eon begin?</string>
    <string name="archean_variant_1_1">4000 mya</string>
    <string name="archean_variant_1_2">4500 mya</string>
    <string name="archean_variant_1_3">3500 mya</string>
    <string name="archean_variant_1_4">2000 mya</string>
    <string name="archean_question_2">What was the primary reason for high temperatures on early Earth during the Archean?</string>
    <string name="archean_variant_2_1">High concentration of greenhouse gases</string>
    <string name="archean_variant_2_2">The Sun was much brighter</string>
    <string name="archean_variant_2_3">Frequent asteroid impacts</string>
    <string name="archean_variant_2_4">Volcanic activity</string>
    <string name="archean_question_3">What was the approximate luminosity of the Sun during the Archean Eon compared to today?</string>
    <string name="archean_variant_3_1">70–75%</string>
    <string name="archean_variant_3_2">50%</string>
    <string name="archean_variant_3_3">90%</string>
    <string name="archean_variant_3_4">100%</string>
    <string name="archean_question_4">What was a major event that likely delayed the emergence of life in the Early Archean?</string>
    <string name="archean_variant_4_1">Late Heavy Bombardment</string>
    <string name="archean_variant_4_2">Great Oxidation Event</string>
    <string name="archean_variant_4_3">Supercontinent formation</string>
    <string name="archean_variant_4_4">The Moon’s formation</string>
    <string name="archean_question_5">How many craters larger than 1,000 km are estimated to have formed on Earth during the Late Heavy Bombardment?</string>
    <string name="archean_variant_5_1">About 40</string>
    <string name="archean_variant_5_2">About 100</string>
    <string name="archean_variant_5_3">Less than 10</string>
    <string name="archean_variant_5_4">More than 500</string>
    <string name="archean_question_6">What is the earliest widely accepted evidence of life from the Archean?</string>
    <string name="archean_variant_6_1">Stromatolites</string>
    <string name="archean_variant_6_2">Noah’s Ark</string>
    <string name="archean_variant_6_3">Banded iron formations</string>
    <string name="archean_variant_6_4">Greenland’s oldest rocks</string>
    <string name="archean_question_7">Which hypothesis explains the cause of the Late Heavy Bombardment?</string>
    <string name="archean_variant_7_1">Orbital migration of giant planets</string>
    <string name="archean_variant_7_2">Increased solar radiation</string>
    <string name="archean_variant_7_3">Collapse of an asteroid moon</string>
    <string name="archean_variant_7_4">Massive volcanic eruptions</string>
    <string name="archean_question_8">What process likely contributed to the formation of banded iron formations?</string>
    <string name="archean_variant_8_1">Photosynthesis by early microbes</string>
    <string name="archean_variant_8_2">Abiotic volcanic iron deposits</string>
    <string name="archean_variant_8_3">Meteorite impacts</string>
    <string name="archean_variant_8_4">Tidal forces from the Moon</string>
    <string name="archean_question_9">When did the first eukaryotes likely appear, according to lipid biomarker evidence?</string>
    <string name="archean_variant_9_1">Around 2.7 billion years ago</string>
    <string name="archean_variant_9_2">At the start of the Archean</string>
    <string name="archean_variant_9_3">3.5 billion years ago</string>
    <string name="archean_variant_9_4">During the Hadean Eon</string>
    <string name="archean_question_10">What was a key characteristic of Earth\'s tectonics by the end of the Archean?</string>
    <string name="archean_variant_10_1">It resembled modern plate tectonics</string>
    <string name="archean_variant_10_2">There were no tectonic movements</string>
    <string name="archean_variant_10_3">The entire surface was covered in magma</string>
    <string name="archean_variant_10_4">Supercontinents had already formed</string>
    <string name="archean_question_11">What is the earliest known appearance of the iron banded formations?</string>
    <string name="archean_variant_11_1">3850 mya</string>
    <string name="archean_variant_11_2">3650 mya</string>
    <string name="archean_variant_11_3">2890 mya</string>
    <string name="archean_variant_11_4">3200 mya</string>
    <string name="archean_question_12">What type of life forms dominated the Archean Eon?</string>
    <string name="archean_variant_12_1">Prokaryotic microorganisms</string>
    <string name="archean_variant_12_2">Multicellular animals</string>
    <string name="archean_variant_12_3">Flowering plants</string>
    <string name="archean_variant_12_4">Vertebrates</string>
    <string name="archean_question_13">Which type of bacteria played a crucial role in oxygenating the atmosphere during the Archean?</string>
    <string name="archean_variant_13_1">Cyanobacteria</string>
    <string name="archean_variant_13_2">Methanogens</string>
    <string name="archean_variant_13_3">Halophiles</string>
    <string name="archean_variant_13_4">Thermophiles</string>
    <string name="archean_question_14">What was the main metabolic process used by early Archean life forms?</string>
    <string name="archean_variant_14_1">Anaerobic respiration</string>
    <string name="archean_variant_14_2">Photosynthesis</string>
    <string name="archean_variant_14_3">Aerobic respiration</string>
    <string name="archean_variant_14_4">Fermentation</string>
    <string name="archean_question_15">What evidence do scientists use to study early Archean life?</string>
    <string name="archean_variant_15_1">Microfossils and stromatolites</string>
    <string name="archean_variant_15_2">Dinosaur bones</string>
    <string name="archean_variant_15_3">Amber-preserved insects</string>
    <string name="archean_variant_15_4">Fossilized tree rings</string>
    <string name="archean_question_16">Why was the Archean atmosphere different from today?</string>
    <string name="archean_variant_16_1">It lacked free oxygen</string>
    <string name="archean_variant_16_2">It contained large amounts of ozone</string>
    <string name="archean_variant_16_3">It had high levels of nitrogen and oxygen</string>
    <string name="archean_variant_16_4">It was mostly composed of helium</string>
    <string name="archean_question_17">What is the significance of stromatolites in the Archean period?</string>
    <string name="archean_variant_17_1">They provide evidence of early microbial life</string>
</resources>